# gssweb

./: .gitignore  CMakeLists.txt  PauseNotes.html  dependencies.txt  gssweb.spec  importname.txt  navigator.gssweb.js  win-build.bat
browsers/: CMakeLists.txt
browsers/chrome/: CMakeLists.txt
browsers/chrome/app/: background.js  contentscript.js  gssweb.html  gssweb.js  gssweb_utils.js  manifest.json  navigator.gss.js
browsers/chrome/gssweb/: manifest.json
browsers/chrome/host/: README  com.painlesssecurity.jsongss.json
browsers/common/: contentscript.js  navigator.gss.js  navigator.gssEap.js
browsers/firefox/: CMakeLists.txt  chrome.manifest  package.json
browsers/firefox/data/: nav.gss.js
browsers/firefox/lib/: main.js
browsers/firefox/packaging/: harness-options.json  install.rdf
browsers/test/: test.html
chrome/app/: gssweb.contentscript.js  gssweb_background.js  manifest.json  navigator.gss.js
chrome/test/: test.html
debian/: .gitignore  changelog  control  copyright  docs  rules
docs/: js_api_design.html
firefox/: package.json
firefox/data/: gssweb.contentscript.js  gssweb_utils.js  navigator.gss.js
firefox/lib/: main.js
gssapi_utils/: CMakeLists.txt  gssapi_utils.c  gssapi_utils.h
json_gssapi/: CMakeLists.txt  json_gssapi_logger.sh  json_protocol.txt  main.cpp  test.rb
json_gssapi/src/: CMakeLists.txt  GSSAcquireCred.cpp  GSSAcquireCred.h  GSSCommand.h  GSSCreateSecContextCommand.cpp  GSSCreateSecContextCommand.h  GSSException.cpp  GSSException.h  GSSGetMic.cpp  GSSImportName.cpp  GSSImportName.h  GSSPseudoRandom.cpp  GSSRequest.cpp  GSSRequest.h  GSSUnwrap.cpp  GSSWrap.h  main.cpp  util_base64.cpp  util_json.cpp  util_json.h  util_random.cpp  util_random.h
json_gssapi/src/cache/: GSSContextCache.cpp  GSSContextCache.h  GSSCredentialCache.cpp  GSSCredentialCache.h  GSSNameCache.cpp  GSSNameCache.h
json_gssapi/src/commands/: GSSAcquireCred.cpp  GSSAcquireCred.h  GSSCommand.cpp  GSSCommand.h  GSSCreateSecContextCommand.cpp  GSSCreateSecContextCommand.h  GSSDisplayName.cpp  GSSDisplayName.h  GSSGetMic.cpp  GSSGetMic.h  GSSImportName.cpp  GSSImportName.h  GSSInitSecContext.cpp  GSSInitSecContext.h  GSSPseudoRandom.cpp  GSSPseudoRandom.h  GSSUnwrap.cpp  GSSUnwrap.h  GSSWrap.cpp  GSSWrap.h
json_gssapi/src/datamodel/: GSSBuffer.cpp  GSSBuffer.h  GSSContext.cpp  GSSContext.h  GSSCredential.cpp  GSSCredential.h  GSSDisplayStatus.cpp  GSSDisplayStatus.h  GSSName.cpp  GSSName.h  GSSOID.cpp  GSSOID.h  GSSOIDSet.cpp  GSSOIDSet.h
json_gssapi/src/utils/: base64.h  util_base64.cpp  util_base64.h  util_random.cpp  util_random.h
json_gssapi/test/: CMakeLists.txt  GSSAcquireCredTest.cpp  GSSAcquireCredTest.h  GSSCreateSecContextTest.cpp  GSSCreateSecContextTest.h  GSSExceptionTest.cpp  GSSExceptionTest.h  GSSGetMicTest.cpp  GSSGetMicTest.h  GSSImportNameTest.cpp  GSSImportNameTest.h  GSSPseudoRandomTest.cpp  GSSPseudoRandomTest.h  GSSUnwrapTest.cpp  GSSUnwrapTest.h  GSSWrapTest.cpp  GSSWrapTest.h  InitSecContextMock.cpp  InitSecContextMock.h  JSONParseTest.cpp  JSONParseTest.h  MockImportName.cpp  MockImportName.h  NameCacheTest.cpp  NameCacheTest.h  test_run.cpp  test_with_options.cpp
json_gssapi/test/command_mocks/: CMakeLists.txt  InitSecContextMock.cpp  InitSecContextMock.h  MockAcquireCred.cpp  MockAcquireCred.h  MockGetMic.cpp  MockGetMic.h  MockImportName.cpp  MockImportName.h  MockPseudoRandom.cpp  MockPseudoRandom.h  MockUnwrap.cpp  MockUnwrap.h  MockWrap.cpp  MockWrap.h
json_gssapi/test/datamodel/: CMakeLists.txt  GSSBufferTest.cpp  GSSBufferTest.h  GSSOIDSetTest.cpp  GSSOIDSetTest.h
npapi/: .gitignore  CMakeLists.txt  js_gss_api.c  npapi.c  npapiplugin.cpp  npapiplugin.h  test.html
npapi/Win/: CMakeLists.txt  dllmain.c
test/npapi/: test_dlopen.c
xpi/: chrome.manifest  package.json
xpi/chrome/content/: nav.gss.js
xpi/data/: nav.gss.js.1  navigator.gss.js
xpi/lib/: main.js  navigator.gss.js
